@@ -170,6 +170,13 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   error_invalid_url		"Please specify a valid url."
   error_url_has_http            "Site URL must not include the http:// portion of the URL."
   error_preview_url_has_http    "Site preview URL must not include the http:// portion of the URL."
+  error_url_has_path            "Site URL must not include directories.  Remove all forward slashes and anything after them."
+  error_preview_url_has_path    "Site Preview URL must not include directories.  Remove all forward slashes and anything after them."
+  error_url_has_bad_chars       "Site URL contains invalid charcters.  Valid characters for a URL are letters, numbers, periods, hypens and underscores."
+  error_preview_url_has_bad_chars "Site Preview URL contains invalid charcters.  Valid characters for a URL are letters, numbers, periods, hypens and underscores."
+  error_publish_path_not_absolute "Site Publish Path must be an obsolute path, starting with '/'."
+  error_preview_path_not_absolute "Site Publish Path must be an obsolute path, starting with '/'."
+
   message_add_cancelled		"Add site cancelled."
   message_deleted		"Site: $url deleted."
   message_edit_cancelled	"Edit site cancelled."
